@@ -1032,7 +1032,7 @@ void CMainFrame::OnSiteList(GtkMenuItem* mitem UNUSED, CMainFrame* _this)
 void CMainFrame::OnJumpToPage(GObject* obj, CMainFrame* _this)
 {
 	INFO("On jump to, obj=%x, _this->m_JumpTos[0]=%x",
-		(unsigned int) obj, (unsigned int) _this->m_JumpTos[0]);
+	     (word_t) obj, (word_t) _this->m_JumpTos[0]);
 	for( int i = 0; i < 10; ++i )
 		if( obj == _this->m_JumpTos[i] )
 		{
@@ -1537,7 +1537,7 @@ gboolean CMainFrame::OnURLEntryKillFocus(GtkWidget* entry,
 
 int CMainFrame::GetViewIndex(CTermView* view)
 {
-	DEBUG( "get view index, view = %x", (unsigned int) view );
+	DEBUG( "get view index, view = %x", (word_t) view );
 	if( !view )
 		return -1;
 	DEBUG( "view->m_Widget = %x", (unsigned int) view->m_Widget );
